--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,16 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
+training = [
+    "torch>=2.1.0",
+    "transformers>=4.40.0",
+    "trl>=0.27.0",
+    "peft>=0.10.0",
+    "accelerate>=0.28.0",
+    "wandb>=0.16.0",
+    "scikit-learn>=1.4.0",
+    "requests>=2.31.0",
+]
 dev = [
     "pytest>=8.0.0",
     "black>=24.0.0",
